Wed Mar 08 115:4500 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Removed a fixup that should no longer be needed now that the
	coordinate stuff is fixed - NB you need to update your copy of
	WindowMaker to the latest CVS code because that contains some
	coordinate handling bug fixes that we need.
	* Source/NSPopPupButton.m: Removed workaround for bad coordinates.
	* Source/NSPopPupButtonCell.m: ditto.

Wed Mar 08 13:15:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSWindow.m: Final (I hope) coordinate handling fixes to
	use proper frame coordinates and offsets now that support is in
	backend and WindowMaker bugs are fixed.

Wed Mar 08 07:44:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSText.m: Fixes by Fred Kiefer for rich text display.
	* Source/NSStringDrawing.m: ditto
	* Headers/AppKit/NSText.h: ditto
	* Headers/AppKit/NSStringDrawing.h: ditto

Tue Mar 07 11:00:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSWindow.m: Changes throughout to use correct offsets for
	differences between content rect and frame coordinates.
	Base coordinate system is that of the content rect, so conversions
	between screen and base coordinates are required except for
	borderless windows (where the frame rect is the same as the content
	rect).

Tue Mar 07 06:24:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSApplication.m: ([activateIgnoringOtherApps]) order key
	window to front when activating app.

Tue Mar  7 03:23:55 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	Warning: the gmodel format was changed by this fix - and it is
	going to be changing for a while.  If you are using CVS be sure to
	be always creating and running gmodels with the same CVS version.
	* Model/GMAppKit.m 
	([NSPopUpButton +createObjectForModelUnarchiver:]): Tidied.
	([NSPopUpButton -encodeWithModelArchiver:]): Encode isEnabled,
	tag, target, action.  Code untested.